website/versioned_docs/version-0.1.0/tutorials/external_generation_node/index.mdx
---
title: RandomForest with ExternalGenerationNode
sidebar_label: RandomForest with ExternalGenerationNode
---

import LinkButtons from "../../../website/src/components/LinkButtons.jsx";
import CellOutput from "../../../website/src/components/CellOutput.jsx";
import {BokehFigure, PlotlyFigure} from "../../../website/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/cristianlara/Ax/blob/main/tutorials/external_generation_node.ipynb"
  colabUrl="https://colab.research.google.com/github/cristianlara/Ax/blob/main/tutorials/external_generation_node.ipynb"
/>

# Using external methods for candidate generation in Ax

Out of the box, Ax offers many options for candidate generation, most of which utilize
Bayesian optimization algorithms built using [BoTorch](https://botorch.org/). For users
that want to leverage Ax for experiment orchestration (via `AxClient` or `Scheduler`)
and other features (e.g., early stopping), while relying on other methods for candidate
generation, we introduced `ExternalGenerationNode`.

A `GenerationNode` is a building block of a `GenerationStrategy`. They can be combined
together utilize different methods for generating candidates at different stages of an
experiment. `ExternalGenerationNode` exposes a lightweight interface to allow the users
to easily integrate their methods into Ax, and use them as standalone or with other
`GenerationNode`s in a `GenerationStrategy`.

In this tutorial, we will implement a simple generation node using
`RandomForestRegressor` from sklearn, and combine it with Sobol (for initialization) to
optimize the Hartmann6 problem.

NOTE: This is for illustration purposes only. We do not recommend using this strategy as
it typically does not perform well compared to Ax's default algorithms due to it's
overly greedy behavior.

```python
import time
from typing import Any, Dict, List, Optional, Tuple

import numpy as np
from ax.core.base_trial import TrialStatus
from ax.core.data import Data
from ax.core.experiment import Experiment
from ax.core.parameter import RangeParameter
from ax.core.types import TParameterization
from ax.modelbridge.external_generation_node import ExternalGenerationNode
from ax.modelbridge.generation_node import GenerationNode
from ax.modelbridge.generation_strategy import GenerationStrategy
from ax.modelbridge.model_spec import ModelSpec
from ax.modelbridge.registry import Models
from ax.modelbridge.transition_criterion import MaxTrials
from ax.plot.trace import plot_objective_value_vs_trial_index
from ax.service.ax_client import AxClient, ObjectiveProperties
from ax.service.utils.report_utils import exp_to_df
from ax.utils.common.typeutils import checked_cast
from ax.utils.measurement.synthetic_functions import hartmann6
from sklearn.ensemble import RandomForestRegressor


class RandomForestGenerationNode(ExternalGenerationNode):
    """A generation node that uses the RandomForestRegressor
    from sklearn to predict candidate performance and picks the
    next point as the random sample that has the best prediction.

    To leverage external methods for candidate generation, the user must
    create a subclass that implements ``update_generator_state`` and
    ``get_next_candidate`` methods. This can then be provided
    as a node into a ``GenerationStrategy``, either as standalone or as
    part of a larger generation strategy with other generation nodes,
    e.g., with a Sobol node for initialization.
    """

    def __init__(self, num_samples: int, regressor_options: Dict[str, Any]) -> None:
        """Initialize the generation node.

        Args:
            regressor_options: Options to pass to the random forest regressor.
            num_samples: Number of random samples from the search space
                used during candidate generation. The sample with the best
                prediction is recommended as the next candidate.
        """
        t_init_start = time.monotonic()
        super().__init__(node_name="RandomForest")
        self.num_samples: int = num_samples
        self.regressor: RandomForestRegressor = RandomForestRegressor(
            **regressor_options
        )
        # We will set these later when updating the state.
        # Alternatively, we could have required experiment as an input
        # and extracted them here.
        self.parameters: Optional[List[RangeParameter]] = None
        self.minimize: Optional[bool] = None
        # Recording time spent in initializing the generator. This is
        # used to compute the time spent in candidate generation.
        self.fit_time_since_gen: float = time.monotonic() - t_init_start

    def update_generator_state(self, experiment: Experiment, data: Data) -> None:
        """A method used to update the state of the generator. This includes any
        models, predictors or any other custom state used by the generation node.
        This method will be called with the up-to-date experiment and data before
        ``get_next_candidate`` is called to generate the next trial(s). Note
        that ``get_next_candidate`` may be called multiple times (to generate
        multiple candidates) after a call to  ``update_generator_state``.

        For this example, we will train the regressor using the latest data from
        the experiment.

        Args:
            experiment: The ``Experiment`` object representing the current state of the
                experiment. The key properties includes ``trials``, ``search_space``,
                and ``optimization_config``. The data is provided as a separate arg.
            data: The data / metrics collected on the experiment so far.
        """
        search_space = experiment.search_space
        parameter_names = list(search_space.parameters.keys())
        metric_names = list(experiment.optimization_config.metrics.keys())
        if any(
            not isinstance(p, RangeParameter) for p in search_space.parameters.values()
        ):
            raise NotImplementedError(
                "This example only supports RangeParameters in the search space."
            )
        if search_space.parameter_constraints:
            raise NotImplementedError(
                "This example does not support parameter constraints."
            )
        if len(metric_names) != 1:
            raise NotImplementedError(
                "This example only supports single-objective optimization."
            )
        # Get the data for the completed trials.
        num_completed_trials = len(experiment.trials_by_status[TrialStatus.COMPLETED])
        x = np.zeros([num_completed_trials, len(parameter_names)])
        y = np.zeros([num_completed_trials, 1])
        for t_idx, trial in experiment.trials.items():
            if trial.status == "COMPLETED":
                trial_parameters = trial.arm.parameters
                x[t_idx, :] = np.array([trial_parameters[p] for p in parameter_names])
                trial_df = data.df[data.df["trial_index"] == t_idx]
                y[t_idx, 0] = trial_df[trial_df["metric_name"] == metric_names[0]][
                    "mean"
                ].item()

        # Train the regressor.
        self.regressor.fit(x, y)
        # Update the attributes not set in __init__.
        self.parameters = search_space.parameters
        self.minimize = experiment.optimization_config.objective.minimize

    def get_next_candidate(
        self, pending_parameters: List[TParameterization]
    ) -> TParameterization:
        """Get the parameters for the next candidate configuration to evaluate.

        We will draw ``self.num_samples`` random samples from the search space
        and predict the objective value for each sample. We will then return
        the sample with the best predicted value.

        Args:
            pending_parameters: A list of parameters of the candidates pending
                evaluation. This is often used to avoid generating duplicate candidates.
                We ignore this here for simplicity.

        Returns:
            A dictionary mapping parameter names to parameter values for the next
            candidate suggested by the method.
        """
        bounds = np.array([[p.lower, p.upper] for p in self.parameters.values()])
        unit_samples = np.random.random_sample([self.num_samples, len(bounds)])
        samples = bounds[:, 0] + (bounds[:, 1] - bounds[:, 0]) * unit_samples
        # Predict the objective value for each sample.
        y_pred = self.regressor.predict(samples)
        # Find the best sample.
        best_idx = np.argmin(y_pred) if self.minimize else np.argmax(y_pred)
        best_sample = samples[best_idx, :]
        # Convert the sample to a parameterization.
        candidate = {
            p_name: best_sample[i].item()
            for i, p_name in enumerate(self.parameters.keys())
        }
        return candidate
```

## Construct the GenerationStrategy

We will use Sobol for the first 5 trials and defer to random forest for the rest.

```python
generation_strategy = GenerationStrategy(
    name="Sobol+RandomForest",
    nodes=[
        GenerationNode(
            node_name="Sobol",
            model_specs=[ModelSpec(Models.SOBOL)],
            transition_criteria=[
                MaxTrials(
                    # This specifies the maximum number of trials to generate from this node, 
                    # and the next node in the strategy.
                    threshold=5,
                    block_transition_if_unmet=True,
                    transition_to="RandomForest"
                )
            ],
        ),
        RandomForestGenerationNode(num_samples=128, regressor_options={}),
    ],
)
```

## Run a simple experiment using AxClient

More details on how to use AxClient can be found in the
[tutorial](https://ax.dev/tutorials/gpei_hartmann_service.html).

```python
ax_client = AxClient(generation_strategy=generation_strategy)

ax_client.create_experiment(
    name="hartmann_test_experiment",
    parameters=[
        {
            "name": f"x{i}",
            "type": "range",
            "bounds": [0.0, 1.0],
            "value_type": "float",  # Optional, defaults to inference from type of "bounds".
        }
        for i in range(1, 7)
    ],
    objectives={"hartmann6": ObjectiveProperties(minimize=True)},
)


def evaluate(parameterization: TParameterization) -> Dict[str, Tuple[float, float]]:
    x = np.array([parameterization.get(f"x{i+1}") for i in range(6)])
    return {"hartmann6": (checked_cast(float, hartmann6(x)), 0.0)}
```

<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Starting optimization with verbose logging. To disable logging, set the verbose_logging argument to False. Note that float values in the logs are rounded to 6 decimal points.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.utils.instantiation: Created search space: SearchSpace(parameters=[RangeParameter(name='x1', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x2', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x3', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x4', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x5', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x6', parameter_type=FLOAT, range=[0.0, 1.0])], parameter_constraints=[]).`
}
</CellOutput>

### Run the optimization loop

```python
for i in range(15):
    parameterization, trial_index = ax_client.get_next_trial()
    ax_client.complete_trial(
        trial_index=trial_index, raw_data=evaluate(parameterization)
    )
```

<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning: Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
  warn("Encountered exception in computing model fit quality: " + str(e))
[INFO 09-30 17:09:47] ax.service.ax_client: Generated new trial 0 with parameters {'x1': 0.384079, 'x2': 0.15172, 'x3': 0.372233, 'x4': 0.318388, 'x5': 0.153991, 'x6': 0.273027} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Completed trial 0 with data: {'hartmann6': (-0.607185, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning: Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
  warn("Encountered exception in computing model fit quality: " + str(e))
[INFO 09-30 17:09:47] ax.service.ax_client: Generated new trial 1 with parameters {'x1': 0.856816, 'x2': 0.722, 'x3': 0.97936, 'x4': 0.54725, 'x5': 0.905573, 'x6': 0.654784} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Completed trial 1 with data: {'hartmann6': (-0.000897, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning: Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
  warn("Encountered exception in computing model fit quality: " + str(e))
[INFO 09-30 17:09:47] ax.service.ax_client: Generated new trial 2 with parameters {'x1': 0.665045, 'x2': 0.473207, 'x3': 0.065621, 'x4': 0.062136, 'x5': 0.610325, 'x6': 0.80947} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Completed trial 2 with data: {'hartmann6': (-0.106968, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning: Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
  warn("Encountered exception in computing model fit quality: " + str(e))
[INFO 09-30 17:09:47] ax.service.ax_client: Generated new trial 3 with parameters {'x1': 0.075361, 'x2': 0.90295, 'x3': 0.707786, 'x4': 0.822042, 'x5': 0.361424, 'x6': 0.176813} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Completed trial 3 with data: {'hartmann6': (-0.211837, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning: Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
  warn("Encountered exception in computing model fit quality: " + str(e))
[INFO 09-30 17:09:47] ax.service.ax_client: Generated new trial 4 with parameters {'x1': 0.229187, 'x2': 0.291547, 'x3': 0.752234, 'x4': 0.993827, 'x5': 0.40329, 'x6': 0.490673} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Completed trial 4 with data: {'hartmann6': (-0.032992, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)
[INFO 09-30 17:09:47] ax.service.ax_client: Generated new trial 5 with parameters {'x1': 0.08833, 'x2': 0.184134, 'x3': 0.647417, 'x4': 0.407827, 'x5': 0.518476, 'x6': 0.723195} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:47] ax.service.ax_client: Completed trial 5 with data: {'hartmann6': (-1.332971, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)
[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 6 with parameters {'x1': 0.009592, 'x2': 0.177133, 'x3': 0.753087, 'x4': 0.161454, 'x5': 0.646799, 'x6': 0.545674} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 6 with data: {'hartmann6': (-0.59257, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 7 with parameters {'x1': 0.950225, 'x2': 0.834228, 'x3': 0.589171, 'x4': 0.148809, 'x5': 0.093415, 'x6': 0.662494} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 7 with data: {'hartmann6': (-0.058106, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 8 with parameters {'x1': 0.543456, 'x2': 0.070669, 'x3': 0.989356, 'x4': 0.990062, 'x5': 0.483633, 'x6': 0.705604} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 8 with data: {'hartmann6': (-0.026201, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 9 with parameters {'x1': 0.763684, 'x2': 0.333733, 'x3': 0.587216, 'x4': 0.164702, 'x5': 0.695464, 'x6': 0.072302} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 9 with data: {'hartmann6': (-0.011451, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 10 with parameters {'x1': 0.717886, 'x2': 0.012338, 'x3': 0.617406, 'x4': 0.035417, 'x5': 0.382238, 'x6': 0.295558} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 10 with data: {'hartmann6': (-0.208702, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 11 with parameters {'x1': 0.960026, 'x2': 0.623983, 'x3': 0.349629, 'x4': 0.762285, 'x5': 0.121308, 'x6': 0.174155} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 11 with data: {'hartmann6': (-0.007708, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 12 with parameters {'x1': 0.184547, 'x2': 0.340669, 'x3': 0.974017, 'x4': 0.473782, 'x5': 0.53758, 'x6': 0.970643} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 12 with data: {'hartmann6': (-0.357963, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 13 with parameters {'x1': 0.821476, 'x2': 0.118512, 'x3': 0.342596, 'x4': 0.752414, 'x5': 0.857898, 'x6': 0.620802} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 13 with data: {'hartmann6': (-0.001255, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/botorch/venv/lib/python3.12/site-packages/sklearn/base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().
  return fit_method(estimator, *args, **kwargs)`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Generated new trial 14 with parameters {'x1': 0.194574, 'x2': 0.171522, 'x3': 0.645535, 'x4': 0.87357, 'x5': 0.486316, 'x6': 0.888665} using model RandomForest.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-30 17:09:48] ax.service.ax_client: Completed trial 14 with data: {'hartmann6': (-0.150202, 0.0)}.`
}
</CellOutput>

### View the trials generated during optimization

```python
exp_df = exp_to_df(ax_client.experiment)
exp_df
```

<CellOutput>
{
  `[WARNING 09-30 17:09:48] ax.service.utils.report_utils: Column reason missing for all trials. Not appending column.`
}
</CellOutput>



|    |   trial_index |   arm_name | trial_status   | generation_method   |   hartmann6 |       x1 |       x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:--------------------|------------:|---------:|---------:|---------:|---------:|---------:|---------:|
|  0 |             0 |        0_0 | COMPLETED      | Sobol               |   -0.607185 | 0.384079 | 0.15172  | 0.372233 | 0.318388 | 0.153991 | 0.273027 |
|  1 |             1 |        1_0 | COMPLETED      | Sobol               |   -0.000897 | 0.856816 | 0.722    | 0.97936  | 0.54725  | 0.905573 | 0.654784 |
|  2 |             2 |        2_0 | COMPLETED      | Sobol               |   -0.106968 | 0.665045 | 0.473207 | 0.065621 | 0.062136 | 0.610325 | 0.80947  |
|  3 |             3 |        3_0 | COMPLETED      | Sobol               |   -0.211837 | 0.075361 | 0.90295  | 0.707786 | 0.822042 | 0.361424 | 0.176813 |
|  4 |             4 |        4_0 | COMPLETED      | Sobol               |   -0.032992 | 0.229187 | 0.291547 | 0.752234 | 0.993827 | 0.40329  | 0.490673 |
|  5 |             5 |        5_0 | COMPLETED      | RandomForest        |   -1.33297  | 0.08833  | 0.184134 | 0.647417 | 0.407827 | 0.518476 | 0.723195 |
|  6 |             6 |        6_0 | COMPLETED      | RandomForest        |   -0.59257  | 0.009592 | 0.177133 | 0.753087 | 0.161454 | 0.646799 | 0.545674 |
|  7 |             7 |        7_0 | COMPLETED      | RandomForest        |   -0.058106 | 0.950225 | 0.834228 | 0.589171 | 0.148809 | 0.093415 | 0.662494 |
|  8 |             8 |        8_0 | COMPLETED      | RandomForest        |   -0.026201 | 0.543456 | 0.070669 | 0.989356 | 0.990062 | 0.483633 | 0.705604 |
|  9 |             9 |        9_0 | COMPLETED      | RandomForest        |   -0.011451 | 0.763684 | 0.333733 | 0.587216 | 0.164702 | 0.695464 | 0.072302 |
| 10 |            10 |       10_0 | COMPLETED      | RandomForest        |   -0.208702 | 0.717886 | 0.012338 | 0.617406 | 0.035417 | 0.382238 | 0.295558 |
| 11 |            11 |       11_0 | COMPLETED      | RandomForest        |   -0.007708 | 0.960026 | 0.623983 | 0.349629 | 0.762285 | 0.121308 | 0.174155 |
| 12 |            12 |       12_0 | COMPLETED      | RandomForest        |   -0.357963 | 0.184547 | 0.340669 | 0.974017 | 0.473782 | 0.53758  | 0.970643 |
| 13 |            13 |       13_0 | COMPLETED      | RandomForest        |   -0.001255 | 0.821476 | 0.118512 | 0.342596 | 0.752414 | 0.857898 | 0.620802 |
| 14 |            14 |       14_0 | COMPLETED      | RandomForest        |   -0.150202 | 0.194574 | 0.171522 | 0.645535 | 0.87357  | 0.486316 | 0.888665 |

```python
plot_objective_value_vs_trial_index(
    exp_df=exp_df,
    metric_colname="hartmann6",
    minimize=True,
    title="Hartmann6 Objective Value vs. Trial Index",
)
```

<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/plot/trace.py:864: FutureWarning:
DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.`
}
</CellOutput>


<PlotlyFigure data={require('./assets/plot_data/21269bf8-0d0f-4a28-9ac5-6cf4a76b3b4b.json')} />

